# radar

./: .gitignore  Cargo.toml  README.md  cspell.json  nexrad_level3.py  out.json  out_leftover.json
data/: sn_DC.radar_DS.32dhr_KMKX.last  sn_DC.radar_DS.56rm1_KMKX.last  sn_DC.radar_DS.p99v0_KMKX.last  sn_DS.p20-r_kmkx.last
examples/: parse.rs
specs/: graphic message format.xlsx
src/: codes.rs  error_r.rs  lib.rs  main.rs  message_codes.rs  message_header.rs  plot.rs  product_description.rs  radial.rs  symbology_header.rs  table_v.rs  text_header.rs
src/graphic_alphanumeric/: mod.rs
src/product_symbology/: mod.rs  radial.rs  symbology_block.rs  symbology_header.rs  symbology_layer.rs  symbology_layers.rs
src/product_symbology/packet/: digital_radial.rs  mod.rs  radial.rs  text_and_special_symbol.rs
src/tabular_alphanumeric/: mod.rs
tables/lattice/: tabula-2620001AB(1).json  tabula-2620001AB.csv  tabula-2620001AB.json  tabula-2620001AB.xlsx
tables/stream/: tabula-2620001AB(1).json  tabula-2620001AB.csv  tabula-2620001AB.json
