[package]
name = "radar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
# bytemuck = { version = "1.13.1" }
bzip2 = "0.4.4"
byteorder = "1"
chrono = {version = "0.4.37", features = ["serde"]}
tracing = {version = "0.1.40", featues = ["ansi", "env-filter"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
parse-display = "0.9.0"
plotters = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

nom = "7.1.3"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"